many bugfixes
